redesignedoj/files_usersubmissions/29/submission.txt
7_BUILDROADS_code.cpp:1:1: error: expected unqualified-id before ‘<’ token
    1 | <?php
      | ^
